macos/Classes/trtc_c_api/trtc_cloud_type.h

typedef HWND tx_view;
typedef void* tx_view;
// 5.16
typedef struct {
  const char* file_path;
  int record_type;  // 4.5 TRTCLocalRecordType
  int interval;
  int max_duration_per_file;
} trtc_local_recording_params_t;
// 5.18
typedef struct {
  uint32_t room_id;
  const char* str_room_id;
  const char* user_sig;
  const char* private_map_key;
} trtc_switch_room_config_t;
// 5.19
typedef struct {
  int sample_rate;
  int channel;
  int samples_per_call;
  int mode;  // 3.9 TRTCAudioFrameOperationMode
} trtc_audio_frame_callback_format_t;
// 5.20
typedef struct {
  const char* buffer;
  uint32_t length;
  uint32_t width;
  uint32_t height;
} trtc_image_buffer_t;
// 5.21
typedef struct {
  int type;  // 4.3 TRTCScreenCaptureSourceType
  tx_view source_id;
  const char* source_name;
  trtc_image_buffer_t thumb_bgra;
  trtc_image_buffer_t icon_bgra;
  int is_minimize_window;  // bool -> int
  int is_main_screen;      // bool -> int
  int32_t x;
  int32_t y;
  uint32_t width;
  uint32_t height;
} trtc_screen_capture_source_info_t;
// 5.23
typedef struct {
  int enable_capture_mouse;     // bool -> int
  int enable_high_light;        // bool -> int
  int enable_high_performance;  // bool -> int
  int high_light_color;
  int high_light_width;
  int enable_capture_child_window;  // bool -> int
} trtc_screen_capture_property_t;
// 5.25
typedef struct {
  const char* user_id;
  uint32_t int_room_id;
  const char* str_room_id;
} trtc_user_t;
// 5.26
typedef struct {
  const char* rtmp_url;
  int is_internal_line;  // bool -> int
} trtc_publish_cdn_url_t;
// 5.27
typedef struct {
  int mode;  // 4.12 TRTCPublishMode
  trtc_publish_cdn_url_t* cdn_url_list;
  uint32_t cdn_url_list_size;
  trtc_user_t* mix_stream_identity;
} trtc_publish_target_t;