lib/bindings/trtc/trtc_cloud_struct.dart


  // 4.5 TRTCLocalRecordType
  @ffi.Int()
  external int record_type;

  @ffi.Int()
  external int interval;

  @ffi.Int()
  external int max_duration_per_file;

  static ffi.Pointer<trtc_local_recording_params_t> fromParams(
      TRTCLocalRecordingParams params) {
    final paramsPointer = calloc<trtc_local_recording_params_t>();
    paramsPointer.ref
      ..file_path = params.filePath.toNativeUtf8().cast<ffi.Char>()
      ..record_type = params.recordType.value()
      ..interval = params.interval
      ..max_duration_per_file = params.maxDurationPerFile;
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_local_recording_params_t> pointer) {
    calloc.free(pointer.ref.file_path);

    calloc.free(pointer);
  }
}

// 5.18
class trtc_switch_room_config_t extends ffi.Struct {
  @ffi.Uint32()
  external int room_id;

  external ffi.Pointer<ffi.Char> str_room_id;

  external ffi.Pointer<ffi.Char> user_sig;

  external ffi.Pointer<ffi.Char> private_map_key;

  static ffi.Pointer<trtc_switch_room_config_t> fromParams(
      TRTCSwitchRoomConfig params) {
    final paramsPointer = calloc<trtc_switch_room_config_t>();
    paramsPointer.ref
      ..room_id = params.roomId
      ..str_room_id = params.strRoomId.toNativeUtf8().cast<ffi.Char>()
      ..user_sig = params.userSig.toNativeUtf8().cast<ffi.Char>()
      ..private_map_key = params.privateMapKey.toNativeUtf8().cast<ffi.Char>();
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_switch_room_config_t> pointer) {
    calloc.free(pointer.ref.str_room_id);
    calloc.free(pointer.ref.user_sig);
    calloc.free(pointer.ref.private_map_key);

    calloc.free(pointer);
  }
}

// 5.19
class trtc_audio_frame_callback_format_t extends ffi.Struct {
  @ffi.Int()
  external int sample_rate;

  @ffi.Int()
  external int channel;

  @ffi.Int()
  external int samples_per_call;

  // 3.9 TRTCAudioFrameOperationMode
  @ffi.Int()
  external int mode;

  static ffi.Pointer<trtc_audio_frame_callback_format_t> fromParams(
      TRTCAudioFrameCallbackFormat params) {
    final paramsPointer = calloc<trtc_audio_frame_callback_format_t>();
    paramsPointer.ref
      ..sample_rate = params.sampleRate
      ..channel = params.channel
      ..samples_per_call = params.samplesPerCall
      ..mode = params.mode.value();
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_audio_frame_callback_format_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.20
class trtc_image_buffer_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> buffer;

  @ffi.Uint32()
  external int length;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  static ffi.Pointer<trtc_image_buffer_t> fromParams(TRTCImageBuffer params) {
    final paramsPointer = calloc<trtc_image_buffer_t>();
    paramsPointer.ref
      ..buffer = params.buffer.toString().toNativeUtf8().cast<ffi.Char>()
      ..length = params.length
      ..width = params.width
      ..height = params.height;
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_image_buffer_t> pointer) {
    calloc.free(pointer.ref.buffer);

    calloc.free(pointer);
  }
}

// 5.21
class trtc_screen_capture_source_info_t extends ffi.Struct {
  // 4.3 TRTCScreenCaptureSourceType
  @ffi.Int()
  external int type;

  external tx_view source_id;

  external ffi.Pointer<ffi.Char> source_name;

  external trtc_image_buffer_t thumb_bgra;

  external trtc_image_buffer_t icon_bgra;

  // bool -> int
  @ffi.Int()
  external int is_minimize_window;

  // bool -> int
  @ffi.Int()
  external int is_main_screen;

  @ffi.Int32()
  external int x;

  @ffi.Int32()
  external int y;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  static ffi.Pointer<trtc_screen_capture_source_info_t> create(
      int thumbLength, int iconLength) {
    final paramsPointer = calloc<trtc_screen_capture_source_info_t>();
    paramsPointer.ref
      ..source_name = calloc<ffi.Char>(512)
      ..thumb_bgra.buffer = calloc<ffi.Char>(thumbLength)
      ..icon_bgra.buffer = calloc<ffi.Char>(iconLength);
    return paramsPointer;
  }

  static ffi.Pointer<trtc_screen_capture_source_info_t> fromParams(
      TRTCScreenCaptureSourceInfo params) {
    final paramsPointer = calloc<trtc_screen_capture_source_info_t>();
    paramsPointer.ref
      ..type = params.type.value()
      ..source_id = ffi.Pointer<ffi.Void>.fromAddress(params.viewId)
      ..source_name = params.sourceName.toNativeUtf8().cast<ffi.Char>()
      ..thumb_bgra.buffer =
          params.thumbBGRA.buffer.toString().toNativeUtf8().cast<ffi.Char>()
      ..thumb_bgra.length = params.thumbBGRA.length
      ..thumb_bgra.width = params.thumbBGRA.width
      ..thumb_bgra.height = params.thumbBGRA.height
      ..icon_bgra.buffer =
          params.iconBGRA.buffer.toString().toNativeUtf8().cast<ffi.Char>()
      ..icon_bgra.length = params.iconBGRA.length
      ..icon_bgra.width = params.iconBGRA.width
      ..icon_bgra.height = params.iconBGRA.height
      ..is_minimize_window = params.isMinimizeWindow ? 1 : 0
      ..is_main_screen = params.isMainScreen ? 1 : 0
      ..x = params.x
      ..y = params.y
      ..y = params.y
      ..width = params.width
      ..height = params.height;
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_screen_capture_source_info_t> pointer) {
    calloc.free(pointer.ref.source_name);
    calloc.free(pointer.ref.thumb_bgra.buffer);
    calloc.free(pointer.ref.icon_bgra.buffer);

    calloc.free(pointer);
  }
}

typedef tx_view = ffi.Pointer<ffi.Void>;

// 5.23
class trtc_screen_capture_property_t extends ffi.Struct {
  // bool -> int
  @ffi.Int()
  external int enable_capture_mouse;

  // bool -> int
  @ffi.Int()
  external int enable_high_light;

  // bool -> int
  @ffi.Int()
  external int enable_high_performance;

  @ffi.Int()
  external int high_light_color;

  @ffi.Int()
  external int high_light_width;

  // bool -> int
  @ffi.Int()
  external int enable_capture_child_window;

  static ffi.Pointer<trtc_screen_capture_property_t> fromParams(
      TRTCScreenCaptureProperty params) {
    final paramsPointer = calloc<trtc_screen_capture_property_t>();
    paramsPointer.ref
      ..enable_capture_mouse = params.enableCaptureMouse ? 1 : 0
      ..enable_high_light = params.enableHighLight ? 1 : 0
      ..enable_high_performance = params.enableHighPerformance ? 1 : 0
      ..high_light_color = params.highLightColor
      ..high_light_width = params.highLightWidth
      ..enable_capture_child_window = params.enableCaptureChildWindow ? 1 : 0;
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_screen_capture_property_t> pointer) {
    calloc.free(pointer);
  }
}

// 5.24
// class trtc_audio_parallel_params_t extends ffi.Struct {
//   @ffi.Uint32()
//   external int max_count;
//
//   external ffi.Pointer<ffi.Pointer<ffi.Char>> include_users;
//
//   @ffi.Uint32()
//   external int include_users_count;
//
//   static ffi.Pointer<ffi.Pointer<ffi.Char>> fromStringList(List<String> list) {
//     final listCount = list.length;
//     final ffi.Pointer<ffi.Pointer<ffi.Char>> pointerArray = calloc<ffi.Pointer<ffi.Char>>(listCount);
//
//     for (int i = 0; i < listCount; i++) {
//       final ffi.Pointer<ffi.Char> userPointer = list[i].toNativeUtf8().cast<ffi.Char>();
//       pointerArray[i] = userPointer;
//     }
//
//     return pointerArray;
//   }
//
//   static ffi.Pointer<trtc_audio_parallel_params_t> fromParams(TRTCAudioParallelParams params) {
//     final paramsPointer = calloc<trtc_audio_parallel_params_t>();
//     paramsPointer.ref
//       ..max_count = params.maxCount
//       ..include_users = fromStringList(params.includeUsers)
//       ..include_users_count = params.includeUsers.length;
//     return paramsPointer;
//   }
//
//   static freeStruct(ffi.Pointer<trtc_audio_parallel_params_t> pointer) {
//     int count = pointer.ref.include_users_count;
//     for (int i = 0; i < count; i++) {
//       calloc.free(pointer.ref.include_users[i]);
//     }
//     calloc.free(pointer.ref.include_users);
//
//     calloc.free(pointer);
//   }
// }

// 5.25
class trtc_user_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> user_id;

  @ffi.Uint32()
  external int int_room_id;

  external ffi.Pointer<ffi.Char> str_room_id;

  static ffi.Pointer<trtc_user_t> fromParams(TRTCUser params) {
    final paramsPointer = calloc<trtc_user_t>();
    paramsPointer.ref
      ..user_id = params.userId.toNativeUtf8().cast<ffi.Char>()
      ..int_room_id = params.intRoomId
      ..str_room_id = params.strRoomId.toNativeUtf8().cast<ffi.Char>();
    return paramsPointer;
  }

  static ffi.Pointer<trtc_user_t> setParamList(List<TRTCUser> userList) {
    final userCount = userList.length;
    final userListPointer = calloc<trtc_user_t>(userCount);

    for (int i = 0; i < userCount; i++) {
      userListPointer[i].user_id =
          userList[i].userId.toNativeUtf8().cast<ffi.Char>();
      userListPointer[i].int_room_id = userList[i].intRoomId;
      userListPointer[i].str_room_id =
          userList[i].strRoomId.toNativeUtf8().cast<ffi.Char>();
    }

    return userListPointer;
  }

  static freeStruct(ffi.Pointer<trtc_user_t> pointer) {
    calloc.free(pointer.ref.user_id);
    calloc.free(pointer.ref.str_room_id);

    calloc.free(pointer);
  }

  static freeStructList(ffi.Pointer<trtc_user_t> pointer, int length) {
    for (int i = 0; i < length; i++) {
      calloc.free(pointer[i].user_id);
      calloc.free(pointer[i].str_room_id);
    }
    calloc.free(pointer);
  }
}

// 5.26
class trtc_publish_cdn_url_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> rtmp_url;

  // bool -> int
  @ffi.Int()
  external int is_internal_line;

  static ffi.Pointer<trtc_publish_cdn_url_t> fromParams(
      TRTCPublishCdnUrl params) {
    final paramsPointer = calloc<trtc_publish_cdn_url_t>();
    paramsPointer.ref
      ..rtmp_url = params.rtmpUrl.toNativeUtf8().cast<ffi.Char>()
      ..is_internal_line = params.isInternalLine ? 1 : 0;
    return paramsPointer;
  }

  static ffi.Pointer<trtc_publish_cdn_url_t> setParamList(
      List<TRTCPublishCdnUrl> cdnUrlList) {
    final urlCount = cdnUrlList.length;
    final cdnUrlListPointer = calloc<trtc_publish_cdn_url_t>(urlCount);

    for (int i = 0; i < urlCount; i++) {
      cdnUrlListPointer[i].is_internal_line =
          cdnUrlList[i].isInternalLine ? 1 : 0;
      cdnUrlListPointer[i].rtmp_url =
          cdnUrlList[i].rtmpUrl.toNativeUtf8().cast<ffi.Char>();
    }

    return cdnUrlListPointer;
  }

  static freeStruct(ffi.Pointer<trtc_publish_cdn_url_t> pointer) {
    calloc.free(pointer.ref.rtmp_url);

    calloc.free(pointer);
  }

  static freeStructList(
      ffi.Pointer<trtc_publish_cdn_url_t> pointer, int length) {
    for (int i = 0; i < length; i++) {
      calloc.free(pointer[i].rtmp_url);
    }
    calloc.free(pointer);
  }
}

// 5.27
class trtc_publish_target_t extends ffi.Struct {
  // 4.12 TRTCPublishMode
  @ffi.Int()
  external int mode;

  external ffi.Pointer<trtc_publish_cdn_url_t> cdn_url_list;

  @ffi.Uint32()
  external int cdn_url_list_size;

  external ffi.Pointer<trtc_user_t> mix_stream_identity;

  static ffi.Pointer<trtc_publish_target_t> fromParams(
      TRTCPublishTarget params) {
    final paramsPointer = calloc<trtc_publish_target_t>();
    paramsPointer.ref
      ..mode = params.mode.value()
      ..cdn_url_list = trtc_publish_cdn_url_t.setParamList(params.cdnUrlList)
      ..cdn_url_list_size = params.cdnUrlList.length
      ..mix_stream_identity = trtc_user_t.fromParams(params.mixStreamIdentity);
    return paramsPointer;
  }

  static freeStruct(ffi.Pointer<trtc_publish_target_t> pointer) {
    trtc_publish_cdn_url_t.freeStructList(
        pointer.ref.cdn_url_list, pointer.ref.cdn_url_list_size);
    trtc_user_t.freeStruct(pointer.ref.mix_stream_identity);

    calloc.free(pointer);
  }
}
